--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "my-react-app1",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/Wslaw/my-create-app",
+  "homepage": "https://Wslaw.github.io/my-create-app",
+
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
