--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "my-react-app1",
+  "name": "my-react-app",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://Wslaw.github.io/my-create-app",
-
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "express": "^4.19.2",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-  
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
@@ -43,5 +43,7 @@
   },
   "devDependencies": {
     "gh-pages": "^6.1.1"
-  }
+  },
+  "author": "Viacheslav Protsenco",
+  "license": "ISC"
 }
